[package]
name = "num-prime-bench"
version = "0.0.0"
publish = false
edition.workspace = true
rust-version.workspace = true

[[bench]]
name = "bench"
harness = false

[dependencies]
num-bigint = { workspace = true }
num-prime = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true }

num-primes = { workspace = true, optional = true }
primal-check = { workspace = true }
number-theory = { workspace = true }
is_prime = { workspace = true }
glass_pumpkin = { workspace = true }

[features]
default = ["num-primes"]
